labels are no longer wrapping

--- a/CarRentalServiceUI/CarRentalService.UI/src/app/sign-up/sign-up.component.scss
+++ b/CarRentalServiceUI/CarRentalService.UI/src/app/sign-up/sign-up.component.scss
@@ -68,7 +68,6 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	flex-wrap: wrap;
 }
 
 .next-to{
